--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="index.css" type="text/css">
     <script src="index.js"></script>
-    <title>Document</title>
+    <title>venom Creations</title>
 
   </head>
   <body>
